--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="TopTrackz" />
   <script src="https://sdk.scdn.co/spotify-player.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;700&display=swap">
   <style>
     * { box-sizing: border-box; }
     html, body {
@@ -53,21 +54,11 @@
       transition: background-color 0.3s, transform 0.1s;
       margin: 12px 0;
     }
-    button:hover {
-      filter: brightness(1.1);
-    }
-    button:active {
-      transform: scale(0.98);
-    }
-    .btn-green {
-      background-color: #1DB954;
-    }
-    .btn-red {
-      background-color: #E53935;
-    }
-    .btn-gray {
-      background-color: #2c2c2c;
-    }
+    .btn-green { background-color: #1DB954; }
+    .btn-red { background-color: #E53935; }
+    .btn-gray { background-color: #2c2c2c; }
+    button:hover { filter: brightness(1.1); }
+    button:active { transform: scale(0.98); }
     input {
       padding: 12px;
       width: 80%;
@@ -79,11 +70,6 @@
       text-align: center;
       background-color: #2c2c2c;
       color: white;
-    }
-    #scores {
-      margin-top: 20px;
-      line-height: 1.6em;
-      text-align: center;
     }
     #roundCounter {
       position: absolute;
@@ -115,9 +101,6 @@
       justify-content: center;
       padding: 20px;
       z-index: 10;
-    }
-    #scoreMenu h2 {
-      margin-bottom: 20px;
     }
     #scoreMenu table {
       width: 90%;
@@ -153,41 +136,103 @@
       opacity: 1;
       cursor: pointer;
     }
-    #debug-token {
-      position: fixed;
-      top: 5px;
-      left: 5px;
-      font-size: 0.7rem;
-      color: #999;
-      max-width: 90vw;
-      word-break: break-word;
-    }
   </style>
 </head>
 <body>
   <div id="startScreen" class="screen active">
     <h1>TopTrackz</h1>
     <button class="btn-green" onclick="goTo('modeScreen')">Start</button>
-    <div id="debug-token"></div>
   </div>
 
-  <!-- Weitere Screens hier einfügen wie modeScreen, multiplayerScreen, gameScreen usw. -->
+  <div id="modeScreen" class="screen">
+    <h2>Spielmodus wählen</h2>
+    <button class="btn-green" onclick="startSingleplayer()">Einzelspieler</button>
+    <button class="btn-green" onclick="goTo('multiplayerScreen')">Mehrspieler</button>
+  </div>
 
-  <!-- Spotify Login Button -->
+  <div id="multiplayerScreen" class="screen">
+    <h2>Spielernamen eingeben</h2>
+    <input id="p1" placeholder="Spieler 1" />
+    <input id="p2" placeholder="Spieler 2" />
+    <input id="p3" placeholder="Spieler 3" />
+    <input id="p4" placeholder="Spieler 4" />
+    <input id="p5" placeholder="Spieler 5" />
+    <button class="btn-green" onclick="startMultiplayer()">Starten</button>
+  </div>
+
+  <div id="gameScreen" class="screen">
+    <div id="roundCounter"></div>
+    <div id="menu-icon" onclick="toggleScoreMenu()">≡</div>
+    <h2 id="currentPlayer"></h2>
+    <div id="scoreDisplay"></div>
+    <button class="btn-gray" onclick="playSong()">Abspielen</button>
+    <button class="btn-green" onclick="answer(true)">Erraten</button>
+    <button class="btn-red" onclick="answer(false)">Nicht erraten</button>
+  </div>
+
+  <div id="scoreMenu">
+    <span id="closeMenu" onclick="toggleScoreMenu()">×</span>
+    <h2>Punktestand</h2>
+    <table id="scoreTable"></table>
+  </div>
+
   <div id="spotify-login">
     <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify Login" onclick="startSpotifyLogin()">
   </div>
 
   <script>
-    function goTo(screenId) {
-      document.querySelectorAll(".screen").forEach(el => el.classList.remove("active"));
-      document.getElementById(screenId).classList.add("active");
+    let players = [];
+    let scores = {};
+    let current = 0;
+    let round = 1;
+    function goTo(id) {
+      document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
+    }
+    function startSingleplayer() {
+      players = ["Du"];
+      scores = {"Du": 0};
+      current = 0;
+      round = 1;
+      updateGameScreen();
+      goTo('gameScreen');
+    }
+    function startMultiplayer() {
+      players = [];
+      for (let i = 1; i <= 5; i++) {
+        const val = document.getElementById("p"+i).value.trim();
+        if (val) players.push(val);
+      }
+      if (players.length === 0) return alert("Mindestens ein Spielername ist nötig");
+      players.forEach(p => scores[p] = 0);
+      current = 0;
+      round = 1;
+      updateGameScreen();
+      goTo('gameScreen');
+    }
+    function answer(correct) {
+      const p = players[current];
+      if (correct) scores[p]++;
+      current = (current + 1) % players.length;
+      if (current === 0) round++;
+      updateGameScreen();
+    }
+    function updateGameScreen() {
+      document.getElementById("currentPlayer").textContent = players[current] + " ist dran";
+      document.getElementById("scoreDisplay").textContent = "Punkte: " + scores[players[current]];
+      document.getElementById("roundCounter").textContent = "Runde " + round;
+    }
+    function toggleScoreMenu() {
+      const m = document.getElementById("scoreMenu");
+      if (m.style.display === "flex") m.style.display = "none";
+      else {
+        const table = document.getElementById("scoreTable");
+        table.innerHTML = "<tr><th>Spieler</th><th>Punkte</th></tr>" +
+          players.map(p => `<tr><td>${p}</td><td>${scores[p]}</td></tr>`).join('');
+        m.style.display = "flex";
+      }
     }
   </script>
-
-  <!-- Dein Spotify-Skript kommt hier unten wie vorher -->
-  <script>
-    // Dein vollständiger Spotify-Code von vorher bleibt erhalten...
-  </script>
+  <!-- Spotify Auth etc. kann hier folgen -->
 </body>
 </html>
