--- a/index.html
+++ b/index.html
@@ -71,55 +71,6 @@
       background-color: #2c2c2c;
       color: white;
     }
-    #roundCounter {
-      position: absolute;
-      top: 10px;
-      width: 100%;
-      text-align: center;
-      font-size: 1rem;
-      color: #aaa;
-    }
-    #menu-icon {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      font-size: 24px;
-      cursor: pointer;
-      user-select: none;
-      z-index: 2;
-    }
-    #scoreMenu {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: rgba(0, 0, 0, 0.95);
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-      z-index: 10;
-    }
-    #scoreMenu table {
-      width: 90%;
-      max-width: 300px;
-      border-collapse: collapse;
-      color: white;
-    }
-    #scoreMenu td, #scoreMenu th {
-      padding: 10px;
-      border-bottom: 1px solid #444;
-      text-align: left;
-    }
-    #closeMenu {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      font-size: 24px;
-      cursor: pointer;
-    }
     #spotify-login {
       position: fixed;
       bottom: 20px;
@@ -144,7 +95,29 @@
     <button class="btn-green" onclick="goTo('modeScreen')">Start</button>
   </div>
 
-  <!-- Restliche Screens (modeScreen, multiplayerScreen, gameScreen) bleiben wie vorher -->
+  <div id="modeScreen" class="screen">
+    <h2>Spielmodus wählen</h2>
+    <button class="btn-green" onclick="startSingleplayer()">Einzelspieler</button>
+    <button class="btn-green" onclick="goTo('multiplayerScreen')">Mehrspieler</button>
+  </div>
+
+  <div id="multiplayerScreen" class="screen">
+    <h2>Spielernamen eingeben</h2>
+    <input id="p1" placeholder="Spieler 1" />
+    <input id="p2" placeholder="Spieler 2" />
+    <input id="p3" placeholder="Spieler 3" />
+    <input id="p4" placeholder="Spieler 4" />
+    <input id="p5" placeholder="Spieler 5" />
+    <button class="btn-green" onclick="startMultiplayer()">Starten</button>
+  </div>
+
+  <div id="gameScreen" class="screen">
+    <h2 id="currentPlayer"></h2>
+    <div id="scoreDisplay"></div>
+    <button class="btn-gray" onclick="playSong()">Abspielen</button>
+    <button class="btn-green" onclick="answer(true)">Erraten</button>
+    <button class="btn-red" onclick="answer(false)">Nicht erraten</button>
+  </div>
 
   <div id="spotify-login" onclick="startSpotifyLogin()">
     <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify Login">
@@ -154,6 +127,43 @@
     function goTo(id) {
       document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
       document.getElementById(id).classList.add('active');
+    }
+
+    let players = [];
+    let scores = {};
+    let current = 0;
+
+    function startSingleplayer() {
+      players = ["Du"];
+      scores = {"Du": 0};
+      current = 0;
+      updateGameScreen();
+      goTo('gameScreen');
+    }
+
+    function startMultiplayer() {
+      players = [];
+      for (let i = 1; i <= 5; i++) {
+        const val = document.getElementById("p"+i).value.trim();
+        if (val) players.push(val);
+      }
+      if (players.length === 0) return alert("Mindestens ein Spielername ist nötig");
+      players.forEach(p => scores[p] = 0);
+      current = 0;
+      updateGameScreen();
+      goTo('gameScreen');
+    }
+
+    function answer(correct) {
+      const p = players[current];
+      if (correct) scores[p]++;
+      current = (current + 1) % players.length;
+      updateGameScreen();
+    }
+
+    function updateGameScreen() {
+      document.getElementById("currentPlayer").textContent = players[current] + " ist dran";
+      document.getElementById("scoreDisplay").textContent = "Punkte: " + scores[players[current]];
     }
 
     const CLIENT_ID = "9fb9db7417034d34971b1defb719cdc8";
@@ -207,7 +217,6 @@
         });
     }
 
-    // Speichere Token beim Redirect
     window.onload = () => {
       const hash = window.location.hash;
       if (hash && hash.includes("access_token")) {
@@ -222,4 +231,3 @@
   </script>
 </body>
 </html>
-
