--- a/index.html
+++ b/index.html
@@ -87,6 +87,46 @@
     #spotify-login img:hover {
       opacity: 1;
     }
+    #score-icon {
+      position: fixed;
+      top: 15px;
+      left: 15px;
+      font-size: 28px;
+      z-index: 999;
+      cursor: pointer;
+    }
+    #score-table {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.9);
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 10000;
+      padding: 20px;
+    }
+    #score-table table {
+      width: 90%;
+      max-width: 300px;
+      border-collapse: collapse;
+    }
+    #score-table th, #score-table td {
+      padding: 10px;
+      border-bottom: 1px solid #555;
+      text-align: left;
+      color: white;
+    }
+    #close-table {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      font-size: 28px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -112,6 +152,7 @@
   </div>
 
   <div id="gameScreen" class="screen">
+    <div id="score-icon" onclick="showScoreTable()">☰</div>
     <h2 id="currentPlayer"></h2>
     <div id="scoreDisplay"></div>
     <button class="btn-gray" onclick="playSong()">Abspielen</button>
@@ -119,7 +160,12 @@
     <button class="btn-red" onclick="answer(false)">Nicht erraten</button>
   </div>
 
-  <div id="spotify-login" onclick="startSpotifyLogin()">
+  <div id="score-table">
+    <div id="close-table" onclick="hideScoreTable()">✖</div>
+    <table id="scoreList"></table>
+  </div>
+
+  <div id="spotify-login" onclick="startSpotifyLogin(event)">
     <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify Login">
   </div>
 
@@ -166,11 +212,22 @@
       document.getElementById("scoreDisplay").textContent = "Punkte: " + scores[players[current]];
     }
 
+    function showScoreTable() {
+      const table = document.getElementById("scoreList");
+      table.innerHTML = "<tr><th>Spieler</th><th>Punkte</th></tr>" + players.map(p => `<tr><td>${p}</td><td>${scores[p]}</td></tr>`).join('');
+      document.getElementById("score-table").style.display = "flex";
+    }
+
+    function hideScoreTable() {
+      document.getElementById("score-table").style.display = "none";
+    }
+
     const CLIENT_ID = "9fb9db7417034d34971b1defb719cdc8";
     const REDIRECT_URI = "https://sabine187.github.io/TopTrackz/";
     const SCOPES = "streaming user-read-email user-read-private user-modify-playback-state user-read-playback-state playlist-read-private playlist-read-collaborative";
 
-    function startSpotifyLogin() {
+    function startSpotifyLogin(event) {
+      event.stopPropagation();
       const url = `https://accounts.spotify.com/authorize?client_id=${CLIENT_ID}&redirect_uri=${encodeURIComponent(REDIRECT_URI)}&scope=${encodeURIComponent(SCOPES)}&response_type=token&show_dialog=true`;
       window.location.href = url;
     }
