--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
   <div id="spotify-login" onclick="startSpotifyLogin(event)">
     <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify Login">
   </div>
+  <div id="debug-box" style="position: fixed; top: 10px; right: 10px; font-size: 10px; color: #aaa; background: #222; padding: 5px 10px; border-radius: 5px;">
+    <div id="debug-token">Token: ❌</div>
+    <div id="debug-device">Device: unbekannt</div>
+  </div>
 
   <script>
 const CLIENT_ID = "9fb9db7417034d34971b1defb719cdc8";
@@ -313,7 +317,19 @@ function playSong() {
     });
 }
 
-window.onload = handleRedirect;
+window.onload = async function() {
+  await handleRedirect();
+  const token = localStorage.getItem("spotify_access_token");
+  document.getElementById("debug-token").textContent = token ? "Token: ✅" : "Token: ❌";
+  if (token) {
+    const res = await fetch("https://api.spotify.com/v1/me/player/devices", {
+      headers: { Authorization: `Bearer ${token}` }
+    });
+    const data = await res.json();
+    const active = data.devices.find(d => d.is_active);
+    document.getElementById("debug-device").textContent = active ? `Device: ✅ (${active.name})` : "Device: ❌ Nicht aktiv";
+  }
+};
 </script>
 </body>
 </html>
